--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.7",
+    "react-native-dotenv": "^3.4.11",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.8",
+    "@babel/preset-env": "^7.26.8",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@types/react": "~18.3.12",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
+    "babel-loader": "^9.2.1",
     "typescript": "^5.3.3"
   },
   "private": true
