--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "expo": "~52.0.31",
     "expo-font": "~13.0.3",
     "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.7",
@@ -24,10 +26,14 @@
     "@babel/preset-env": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "@react-native-community/cli": "^15.1.3",
     "@types/react": "~18.3.12",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
     "babel-loader": "^9.2.1",
+    "metro": "^0.81.1",
+    "metro-config": "^0.81.1",
+    "metro-react-native-babel-preset": "^0.77.0",
     "typescript": "^5.3.3"
   },
   "private": true
